Avoid extra space when there's no caption

--- a/assets/sass/patterns/molecules/captioned-asset.scss
+++ b/assets/sass/patterns/molecules/captioned-asset.scss
@@ -23,12 +23,10 @@
 
 .captioned-asset__picture {
   display: block;
-  @include margin(12, "bottom");
 }
 
 .captioned-asset__image {
   display: block;
-  @include margin($blg-space-extra-small-in-px, "bottom");
   outline: 1px solid $color-text-dividers;
   @include padding($blg-space-extra-small-in-px);
   width: 100%;
@@ -36,6 +34,7 @@
 
 .captioned-asset__caption {
   padding: 0 6%;
+  @include margin($blg-space-extra-small-in-px, "top");
 }
 
 @media only screen and (min-width: #{get-rem-from-px($bkpt-captioned-asset-caption)}em) {
